--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Grayscale
 email: passthepieceapp@icloud.com
 url: https://Zeddi-Ink.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Global Community of Cannasseurs: Wanna Test the Beta? Let Our AI Predict and Tag Your Strain!"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
